incluindo db em sqlite e otimizando o código

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "csv-parse": "^5.6.0"
+    "csv-parse": "^5.6.0",
+    "sqlite3": "^5.1.7"
   },
   "name": "mega-virada",
   "version": "1.0.0",
