novas libs adicionadas

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "csv-parse": "^5.6.0",
-    "sqlite3": "^5.1.7"
+    "dotenv": "^16.4.7",
+    "sqlite3": "^5.1.7",
+    "twitter-api-v2": "^1.19.0"
   },
   "name": "mega-virada",
   "version": "1.0.0",
